--- a/Mission2/hpa.yaml
+++ b/Mission2/hpa.yaml
@@ -1,24 +1,20 @@
-{{- if .Values.blockscout.enabled }}
-{{- if .Values.blockscout.hpa.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Release.Name }}-blockscout-hpa
-  namespace: {{ .Release.Namespace }}
+  name: my-blockscout-stack-hpa
+  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     # Name must match the name of the backend of blockscout
-    name: {{ include "blockscout-stack.fullname" . }}-blockscout
-  minReplicas: {{ .Values.blockscout.hpa.minReplicas }}
-  maxReplicas: {{ .Values.blockscout.hpa.maxReplicas }}
+    name: my-blockscout-blockscout-stack-blockscout
+  minReplicas: 1
+  maxReplicas: 10
   metrics:
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ .Values.blockscout.hpa.targetCPUUtilizationPercentage }}
-{{- end }}
-{{- end }}
+          averageUtilization: 70
